--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="@drawable/files_bg" />
 
     <!-- You can insert your own image assets here -->
-     <item android:width="700dp"
-         android:height="400dp"
-         android:gravity="center">
+     <item android:width="400dp"
+         android:height="500dp"
+         android:gravity="center"
+         >
         <bitmap
-            android:gravity="fill"
-            android:src="@drawable/lorry"
+
+            android:src="@drawable/lo"
             android:mipMap="true"/>
     </item>
 </layer-list>
